# deepfake-detection-application-new

./: .gitignore  README.md  app.py  deploy.sh  deployment-output.txt  pyproject.toml
frontend/src/: App.css  App.jsx
lambda/: dashboard.py
stacks/: apigateway_satck.py  dashboard_stack.py  frontend_stack.py  lambda_stack.py
